@@ -33,19 +33,23 @@ _Description: %3d. %s (selected)
 
 Template: debconf/prompt-1-page
 Type: text
-_Description: Prompt: 1 - %d, q to end> 
+_Description: Prompt: 1 - %d, q to quit select> 
 
 Template: debconf/prompt-last-page
 Type: text
-_Description: Prompt: 1 - %d, q to end, b for begin> 
+_Description: Prompt: 1 - %d, q to quit select, b for back> 
+
+Template: debconf/prompt-first-page
+Type: text
+_Description: Prompt: 1 - %d/%d, q to quit select, n for next page> 
 
 Template: debconf/prompt-multi-page
 Type: text
-_Description: Prompt: 1 - %d/%d, q to end, n for next page> 
+_Description: Prompt: 1 - %d/%d, q to quit select, b for back, n for next page> 
 
 Template: debconf/quit-key
 Type: text
-# q to end
+# q to quit select
 _Description: Q
 
 Template: debconf/next-key
@@ -53,9 +57,9 @@ Type: text
 # n for next page
 _Description: N
 
-Template: debconf/begin-key
+Template: debconf/back-key
 Type: text
-# b for begin
+# b for back
 _Description: B
 
 Template: debconf/cont-cancel-prompt
@@ -84,9 +88,13 @@ Template: debconf/prompt-num
 Type: text
 _Description: Prompt: 1 - %d> 
 
-Template: debconf/prompt-multipage
+Template: debconf/prompt-firstpage
 Type: text
 _Description: Prompt: 1 - %d/%d, n for next page> 
+
+Template: debconf/prompt-multipage
+Type: text
+_Description: Prompt: 1 - %d/%d, b for back, n for next page> 
 
 Template: debconf/default-bracket
 Type: text
